--- a/index.html
+++ b/index.html
@@ -13,20 +13,10 @@
 	</head>
 	<body>
 		<h1>Unsplash API Scroll</h1>
-		<div class="loader" id="loader" hidden>
+		<div class="loader" id="loader">
 			<img src="./Bean Eater-1.1s-267px.svg" alt="loading" />
 		</div>
-		<div class="image-container" id="image-container">
-			<img
-			src="https://images.unsplash.com/photo-1671522635398-a2443699d32e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDF8eGpQUjRobGtCR0F8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=60"
-			alt""/> <img
-			src="https://images.unsplash.com/photo-1671522635398-a2443699d32e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDF8eGpQUjRobGtCR0F8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=60"
-			alt""/> <img
-			src="https://images.unsplash.com/photo-1671522635398-a2443699d32e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDF8eGpQUjRobGtCR0F8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=60"
-			alt""/> <img
-			src="https://images.unsplash.com/photo-1671522635398-a2443699d32e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDF8eGpQUjRobGtCR0F8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=60"
-			alt""/>
-		</div>
+		<div class="image-container" id="image-container"></div>
 		<!-- Script -->
 		<script src="script.js"></script>
 	</body>
